# toml-rgb2ansi256

./: .gitignore  .pinact.yaml  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  committed.toml  deny.toml  prek.toml  release-please-config.json  release-plz.toml  zizmor.yaml
.github/: dependabot.yml
.github/workflows/: audit-check.yml  cargo-vet.yml  cd.yml  ci.yml  min-dep-vers.yml  release-please.yml  rust-msrv.yml  spelling.yml
src/: main.rs  patch.rs  toml_traverse.rs
src/snapshots/: toml_rgb2ansi256__patch__tests__rgb_value_to_ansi256.snap  toml_rgb2ansi256__toml_traverse__tests__modify_values.snap
supply-chain/: config.toml
