[package]
name = "toml-rgb2ansi256"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.74"
categories = ["config", "command-line-utilities", "graphics"]
keywords = ["toml", "color", "ansi-256"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rgb2ansi256 = "0.1.1"
toml_edit = "0.21.0"
