[package]
name = "toml-rgb2ansi256"
version = "0.1.3"
authors = ["YEUNG King On <koyeung@gmail.com>"]
categories = ["config", "command-line-utilities", "graphics"]
edition = "2024"
keywords = ["toml", "color", "ansi-256"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/koyeung/toml-rgb2ansi256/"
rust-version = "1.85"
description = "Convert RGB Hex to ANSI-256 codes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rgb2ansi256 = "0.1.1"
toml_edit = "0.24.0"

[lints.clippy]
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-lints-section
# https://doc.rust-lang.org/stable/clippy/index.html
cargo = "warn"

[dev-dependencies]
insta = { version = "1.45.0", features = ["toml"] }
